--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  height: 95vh;
   z-index: 9999;
 }
 
@@ -34,14 +34,64 @@ canvas {
   border: none;
   outline: none;
   border: 1px solid #000;
-  background-color: #e1e1e1;
+  background-color: #f0f0f0;
 }
 
 .clicker-btn:hover {
   background-color: #d1d1d1;
 }
 
+.num-clicks {
+  color: white;
+  user-select: none;
+  transition: .5s ease;
+}
+
+.num-clicks.show {
+  color: black;
+}
+
 .upgrades {
   display: flex;
   gap: 20px;
+  position: relative;
+}
+
+.upgrade {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  transition: .5s ease;
+}
+
+.upgrade:hover {
+  color: black;
+}
+
+.upgrade-btns {
+  cursor: pointer;
+  background-color: none;
+  outline: none;
+  border: none;
+  background-color: white;
+  border: 1px solid #000;
+  padding: 10px 20px;
+  border-radius: 15px;
+  transition: .5s ease;
+}
+
+.upgrade-btns:hover {
+  background-color: #eaeaea;
+  transform: translateY(-5px);
+}
+
+.upgrade-btns.show {
+  color: black;
+}
+
+.upgrade-imgs {
+  width: 60px;
 }
